# srt_trans

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: build-release.yml  ci.yml  python-publish.yml
docs/: API.md  USAGE.md
srt_translator/: __init__.py  cli.py  srt_parser.py  translators.py
